@@ -43,20 +43,21 @@ if (strlen($site_has_been_loaded) == 0) {
 
 <h2>Welcome to FVWM Logo Competition</h2>
 
-<p>If you like to participate, please read
-<?php 
-echo '<a href="'.conv_link_target("rules.php").'">the competition rules</a>.';
-?>
-</p>
-
-<p>The submitted works are linked here.
-You need a modern browser with a good PNG support to view them, like
-Mozilla, Konqueror, Galeon, Netscape, Opera and a number of others.
+<p>
+  The submission period is over since 1st of September. <b>Due the large
+  amount of submitted logos the voting period will start a bit later as
+  it was announced in the <?php mylink("rules.php", "competition rules"); ?></b>
 </p>
 
 <p>
-Most of the logos are transparent, you may change a layout or a css
-to see them on another background.
+  Submitted logos are linked here.
+  You need a modern browser with a good PNG support to view them, like
+  Mozilla, Konqueror, Galeon, Netscape, Opera and a number of others.
+</p>
+
+<p>
+  Most of the logos are transparent, you may change a layout or a css
+  to see them on another background.
 </p>
 
 <?php decoration_window_end(); ?>
@@ -67,11 +68,18 @@ to see them on another background.
 <table cellpadding="10" cellspacing="0" border="0"
 	width="100%" frame="void" rules="none" summary="">
 <tr>
-	<td align="center" valign="middle"><a href="<?php echo conv_link_target('logos_new.php');?>" class="nohilight"><img src="logos_new_overview.png" width="204" height="144" border="0" alt="New logos"></a></td>
-	<td align="center" valign="middle"><a href="<?php echo conv_link_target('logos_old.php');?>" class="nohilight"><img src="logos_old_overview.png" width="204" height="144" border="0" alt="Old logos"></a></td>
+	<td align="center" valign="middle"><a 
+        href="<?php echo conv_link_target('logos_new.php');?>" 
+        class="nohilight"><img 
+          src="logos_new_overview.png" width="204" height="144" border="0" alt="New logos"></a></td>
+	<td align="center" valign="middle"><a 
+        href="<?php echo conv_link_target('logos_old.php');?>" 
+        class="nohilight"><img 
+          src="logos_old_overview.png" width="204" height="144" border="0" alt="Old logos"></a></td>
 </tr>
 <tr>
-	<td align="center" valign="middle"><a href="<?php echo conv_link_target('logos_new.php');?>">View New Logos</a></td>
+	<td align="center" valign="middle"><a href="<?php echo
+	conv_link_target('logos_new.php');?>">View Competition Logos</a></td>
 	<td align="center" valign="middle"><a href="<?php echo conv_link_target('logos_old.php');?>">View Old Logos</a></td>
 </tr>
 </table>
