@@ -1,5 +1,10 @@
 2003-09-03  Uwe Pross  <uwe.pross@gmx.net>
 
+	* logo-competition/index.php: 
+	* logo-competition/rules.php: 
+	* index.php: 
+	Updated announcement of voting period.
+	
 	* logo-competition/logos/1000Sun/*:
 	added logos
 
